Fix scroll always visible on filterable dropdowns

--- a/src-ui/src/app/components/common/filterable-dropdown/filterable-dropdown.component.scss
+++ b/src-ui/src/app/components/common/filterable-dropdown/filterable-dropdown.component.scss
@@ -11,7 +11,7 @@
 
   .items {
     max-height: 400px;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   button:disabled {
